[landing] [fix] button header on mobile breaking layout
Summary:
fix header so button in header doesn't show on mobile

before: {F14989}

after: {F14990}

(side stepping normal PR review because we have a lot of folks looking at the webpage this week.) I felt this was urgent to fix.

Test Plan: shrink viewport to show break point is working as expected and layout isn't broken

Reviewers: atul, ashoat

Reviewed By: ashoat

Subscribers: ashoat, palys-swm, Adrian, karol-bisztyga

Differential Revision: https://phabricator.ashoat.com/D3231

--- a/landing/header.css
+++ b/landing/header.css
@@ -77,7 +77,7 @@ div.button_container {
   }
 
   .request_access,
-  .button_container,
+  div.button_container,
   button.request_access {
     display: none;
   }
